assets/css/styles.css
body {
  font-family: Arial, sans-serif;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

header {
  background-color: #f3e8d5;
  color: white;
  padding: 0;
}
.header-section {
  color: #d39865;
  display: flex;
  justify-content: center;
  gap: 20px;
  padding: 20px;
  align-items: center;
  text-align: center;
}

.clothing {
  margin-top: -10px;
  color: #d39865;
  letter-spacing: 3px;
  font-size: large;
  font-family: "Dancing Script", cursive;
}
nav {
  display: flex;
  background-color: #d39865;
  padding: 10px;
  text-align: center;
  justify-content: center;
  font-family: "Playfair Display", serif;
}
nav ul {
  list-style-type: none;
  padding: 0;
  display: flex;
  margin: 0;
  align-items: center;
}

nav ul li {
  margin-right: 20px;
}
img {
  background-color: #f3e8d5;
}
nav ul li a {
  color: white;
  text-decoration: none;
}
main {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: f2a65a;
}
h1 {
  font-family: "Kavivanar";
  font-weight: 600;
  letter-spacing: 2px;
  font-style: normal;
  padding-top: 25px;
}
.main-content {
  display: flex;
  flex-direction: row;
  align-items: center;
}
.welcome-text {
  font-size: 2rem;
  color: #d39865;
  font-weight: bold;
  margin-bottom: 10px;
}
.offers-text {
  font-size: 1.5rem;
  color: #d39865;
  margin-bottom: 20px;
}
.btn-primary {
  background-color: #d39865;
  border-color: #d39865;
  margin-bottom: 20px;
  padding: 6px 10px;
  color: white;
  font-size: x-large;
  border-radius: 5px;
}
.btn-primary:hover {
  background-color: #b2824d;
  border-color: #b2824d;
}

.video-container {
  position: relative;
  width: 100%;
  padding-bottom: 41%;
  height: 0;
  margin-left: 40px;
}

.video-container video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
#reviews {
  width: 70%;
  margin: 0 auto;
  padding-top: 30px;
}
.card-review {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
  gap: 2px;
  justify-items: center;
  padding: 10px;
}
.reviews-title {
  font-family: "Playfair Display", serif;
  color: #333;
  margin-bottom: 20px;
}
.review {
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 8px;
  padding: 20px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  max-width: 90%;
  margin: auto;
  height: 180px;
}
.review h5 {
  font-size: 1.2rem;
  color: #d39865;
  margin: 5px 0;
}

.review p {
  font-size: 1rem;
  color: #666;
  margin-bottom: 10px;
}

.stars i {
  color: #ffd700;
  margin: 0 2px;
}

footer {
  background-color: #2c1b0c;
  color: white;
  text-align: center;
  padding: 2.5px;
  position: relative;
  font-size: small;
}
footer p {
  padding-top: 8px;
}
/*Shop Page*/
#products {
  display: flex;
  flex-direction: column;
  padding: 10px;
}
#products h1 {
  font-family: "Playfair Display", serif;
  color: #d39865;
}
.products-container {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  gap: 20px;
  padding: 20px;
}

.product-card {
  padding: 10px;
  text-align: center;
  background-color: #ffffff;
  background-image: linear-gradient(
    0deg,
    #ffffff 0%,
    #fdf4eb 50%,
    #fae9d7 100%
  );
  border-radius: 10px;
  transition: transform 0.3s, box-shadow 0.3s;
  overflow: hidden;
}
.product-card:hover {
  transform: translateY(-5px);
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
}
.product-card img {
  max-width: 100%;
  object-fit: contain;
  max-height: 300px;
  background-color: transparent;
}

.product-card h2 {
  font-size: 1.5em;
  margin: 10px 0;
  font-family: "Playfair Display", serif;
}

.product-card .price {
  font-size: 1.3em;
  color: #d39865;
  font-family: "Playfair Display", serif;
}

.product-card .shop-button {
  background-color: #d39865;
  color: white;
  border: none;
  padding: 10px;
  cursor: pointer;
  border-radius: 1px;
  font-family: "Playfair Display", serif;
}

.product-card .shop-button:hover {
  background-color: #b2824d;
}
a {
  text-decoration: none;
  color: inherit;
  cursor: pointer;
}

/*Cart Page*/
#cart {
  border: #ffc695 1.5px solid;
  border-radius: 15px;
  padding: 20px;
  display: flex;
  flex-direction: column;
  width: 80%;
  margin: auto;
}

.product-cart img {
  max-width: 100%;
  object-fit: contain;
  max-height: min-content;
  height: 350px;
  background-color: transparent;
}
.total-box {
  display: flex;
  place-self: end;
  padding: 8px;
  color: #d39865;
  border-radius: 8px;
}

.cart-summary {
  padding: 15px;
  display: flex;
  flex-direction: column;
  gap: 15px;
  width: 50%;
  margin: auto;
}

.checkout-button {
  border-radius: 25px;
  padding: 8px 50px;
  background-color: #d39865;
  border-color: #d39865;
  color: white;
}
.checkout-button:hover {
  background-color: #b2824d;
  border-color: #b2824d;
}
.keep-shopping-button {
  border: 1.5px solid #d39865;
  background-color: transparent;
  color: #d39865;
  border-radius: 25px;
  padding: 8px 50px;
}
.keep-shopping-button:hover {
  background-color: #b2824d;
  border-color: #b2824d;
  color: white;
}

.table th,
.table td {
  vertical-align: middle;
  text-align: center;
}

.table .form-control {
  width: 60px;
  margin: 0 auto;
}
.product-cart {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
  gap: 8px;
}
.product-cart h2 {
  font-size: 1rem;
  margin: 10px 0 0;
  text-align: center;
}
#cart h2 {
  color: black;
  font-family: "Playfair Display", serif;
  font-size: large;
}

.description {
  font-size: medium;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  color: rgb(100, 100, 100);
  text-align: center;
  margin: auto;
  max-width: 80%;
  margin: 0 auto;
}
/*About Page*/
.about-container {
  max-width: 800px;
  margin: 0 auto;
  padding: 30px;
}
.about-title {
  font-family: "Playfair Display", serif;
  color: #d39865;
  text-align: center;
  margin-bottom: 20px;
}

.about-description {
  font-size: 1.1rem;
  color: #555;
  line-height: 1.6;
}
.values-title {
  font-family: "Playfair Display", serif;
  color: #7e5e42;
}

.values-section {
  margin-top: 30px;
}

.value-item {
  background-color: #fdfdfdc2;
  padding: 15px;
  border-radius: 8px;
  margin-bottom: 25px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.value-item h4 {
  color: #d39865;
}
/*Contact Page*/
.contact-container {
  max-width: 600px;
  margin: 0 auto;
  padding: 30px;
}

.contact-title {
  font-family: "Playfair Display", serif;
  color: #d39865;
  text-align: center;
  margin-bottom: 20px;
}

.form-group label {
  font-weight: lighter;
  color: #d39865;
}

.submit-button {
  background-color: #d39865;
  border-color: #d39865;
  color: white;
  width: 100%;
  margin-top: 15px;
}

.submit-button:hover {
  background-color: #b2824d;
  border-color: #b2824d;
  color: white;
}
.map-container {
  margin-top: 40px;
  text-align: center;
}

.map-embed {
  width: 100%;
  height: 300px;
  border: 0;
}
/* Media query para pantallas pequeñas */
@media (max-width: 768px) {
  .main-content {
    flex-direction: column;
    align-items: center;
  }

  .video-container {
    margin-left: 0;
    margin-top: 20px;
  }
  .product-cart img {
    max-width: 100%;
    object-fit: cover;
    max-height: 150px;
    background-color: transparent;
  }
  .description {
    width: 100%;
    font-size: small;
  }
  .card-review {
    gap: 18px;
  }
  .contact-container {
    padding: 20px;
    margin-bottom: 25px;
  }
  .map-title,
  .map-container {
    display: none;
  }
}

